DigicielFull/force-app/main/default/objects/amc__Expense__c/amc__Expense__c.object-meta.xml
<CustomObject>
    <description>This Object is used to record expenses relating to a particular Project.</description>
    <label>Expense</label>
    <nameField>
        <displayFormat>EXP:{000000}</displayFormat>
        <label>Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>