DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Amount_Claimed__c.field-meta.xml
<CustomField>
    <fullName>amc__Amount_Claimed__c</fullName>
    <formula>IF(amc__Mileage_Amount__c &gt; 0, amc__Mileage_Amount__c, amc__Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the value of the Expense Claim</inlineHelpText>
    <label>Amount Claimed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>