DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Approval_Date__c</fullName>
    <formula>IF( ISPICKVAL(amc__Approval_Status__c, &apos;Approved&apos;), IF( NOT(ISNULL(amc__Approval_Date_Stamp__c)),amc__Approval_Date_Stamp__c,amc__Date__c),null  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Approval date for this Time Log</inlineHelpText>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>