DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Billing_Event_Item__c.field-meta.xml
<CustomField>
    <fullName>amc__Billing_Event_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Billing Event Item record this Expense was invoiced on</inlineHelpText>
    <label>Billing Event Item</label>
    <referenceTo>amc__Billing_Event_Item__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>