DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Converted_Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>amc__Converted_Cost_Amount__c</fullName>
    <inlineHelpText>If the Project currency is different from the Expense currency, this field will contain the converted value.</inlineHelpText>
    <label>Converted Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>