DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Converted_Currency__c.field-meta.xml
<CustomField>
    <fullName>amc__Converted_Currency__c</fullName>
    <inlineHelpText>The currency code associated with the Converted Amount.</inlineHelpText>
    <label>Converted Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>