DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Converted_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>amc__Converted_Tax_Amount__c</fullName>
    <description>If the Project currency is different from the Expense currency, this field will contain the converted Tax Amount value.</description>
    <label>Converted Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>