DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>amc__Cost_Amount__c</fullName>
    <inlineHelpText>Identifies the cost amount being claimed (if not mileage)</inlineHelpText>
    <label>Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>