DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Cost_ex_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>amc__Cost_ex_Tax_Amount__c</fullName>
    <formula>amc__Cost_Amount__c -  amc__Cost_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Calculates the Cost ex-Tax Amount based on &apos;Cost Amount&apos; - &apos;Cost Tax Amount&apos;</inlineHelpText>
    <label>Cost ex Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>