DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Cost_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>amc__Cost_Tax_Amount__c</fullName>
    <inlineHelpText>Identifies the cost tax amount of the Expense</inlineHelpText>
    <label>Cost Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>