DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Custom_Mark_Up__c.field-meta.xml
<CustomField>
    <fullName>amc__Custom_Mark_Up__c</fullName>
    <inlineHelpText>This Percent can be used to override the Project Mark Up %</inlineHelpText>
    <label>Custom Mark Up %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>