DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Distance_Km_Miles__c.field-meta.xml
<CustomField>
    <fullName>amc__Distance_Km_Miles__c</fullName>
    <inlineHelpText>Identifies the number of Kilometres / Miles being claimed</inlineHelpText>
    <label>Distance (Km / Miles)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>