DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__ex_Tax_Amt__c.field-meta.xml
<CustomField>
    <fullName>amc__ex_Tax_Amt__c</fullName>
    <description>Formula: Calculates the ex-Tax Amount based on &apos;Amount&apos; - &apos;Tax Amount&apos;</description>
    <formula>amc__Amount__c - amc__Tax_Amt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ex-Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>