DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Expense_Notes__c.field-meta.xml
<CustomField>
    <fullName>amc__Expense_Notes__c</fullName>
    <inlineHelpText>Identifies any supporting notes as to why the Expense was incurred</inlineHelpText>
    <label>Expense Notes</label>
    <type>TextArea</type>
</CustomField>