DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Expense_Notes_RT__c.field-meta.xml
<CustomField>
    <fullName>amc__Expense_Notes_RT__c</fullName>
    <inlineHelpText>Detailed Notes about the Expense</inlineHelpText>
    <label>Expense Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>