DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Incurred_By__c.field-meta.xml
<CustomField>
    <fullName>amc__Incurred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Role who incurred the Expense</inlineHelpText>
    <label>Incurred By</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>