DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Incurred_By_Current_User__c.field-meta.xml
<CustomField>
    <fullName>amc__Incurred_By_Current_User__c</fullName>
    <description>Identifies if the Current User is the Person Who Incurred the Expense.</description>
    <formula>IF( amc__Incurred_By__r.amc__User__r.Id = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies if the Current User is the Person Who Incurred the Expense.</inlineHelpText>
    <label>Incurred By Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>