DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Mark_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>amc__Mark_Up_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if this Expense should have a Mark Up applied</inlineHelpText>
    <label>Mark Up Required</label>
    <type>Checkbox</type>
</CustomField>