DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Mileage_Amount__c.field-meta.xml
<CustomField>
    <fullName>amc__Mileage_Amount__c</fullName>
    <formula>If(amc__Mark_Up_Required__c,
 amc__Distance_Km_Miles__c * amc__Incurred_By__r.amc__Mileage_Rate__c + (( amc__Distance_Km_Miles__c * 
 amc__Incurred_By__r.amc__Mileage_Rate__c) * amc__Project__r.amc__Expenses_Mark_Up__c), amc__Distance_Km_Miles__c * amc__Incurred_By__r.amc__Mileage_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the amount being claimed for the Distance</inlineHelpText>
    <label>Mileage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>