DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Milestone__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Milestone this Expense relates to.</description>
    <inlineHelpText>The Milestone this Expense relates to.</inlineHelpText>
    <label>Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>amc__Milestone__c.amc__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.amc__Project__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>amc__Milestone__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>