DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Non_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Expenses marked as Non Billable will not be included in Billing Events/Items.</inlineHelpText>
    <label>Non Billable</label>
    <type>Checkbox</type>
</CustomField>