DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>amc__Payment_Status__c</fullName>
    <description>Identifies the Status of the Expense. Note: It is recommended you do not edit or remove these values</description>
    <inlineHelpText>Identifies the Status of the Expense. Note: It is recommended you do not edit or remove these values</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>