DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Project_Owner_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Owner_Approval_Required__c</fullName>
    <formula>amc__Project__r.amc__Project_Owner_Expense_Approval_Reqd__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used by Expense Trigger. Identifies if Project Owner Approval is required for this Expense</inlineHelpText>
    <label>Project Owner Approval Required</label>
    <type>Checkbox</type>
</CustomField>