DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Project_Owner_Approver__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Owner_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Role record for the person that is the Project Owner responsible for approving this Expense</inlineHelpText>
    <label>Project Owner Approver</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Expenses (Project Owner Approver)</relationshipLabel>
    <relationshipName>Approval_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>