DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Project_Owner_Current_User__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Owner_Current_User__c</fullName>
    <formula>amc__Project_Owner_Approver__r.amc__User__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies if the Current User is the User required to approve this Expense as the Project Owner</inlineHelpText>
    <label>Project Owner Current User</label>
    <type>Checkbox</type>
</CustomField>