DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>amc__Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Purchase Order this Expense relates to</description>
    <inlineHelpText>Identifies the Purchase Order this Expense relates to</inlineHelpText>
    <label>Purchase Order</label>
    <referenceTo>amc__Purchase_Order__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>