DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Role_Manager_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>amc__Role_Manager_Approval_Status__c</fullName>
    <label>Role Manager Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>amc__Approval_Values</valueSetName>
    </valueSet>
</CustomField>