DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Role_Manager_Current_User__c.field-meta.xml
<CustomField>
    <fullName>amc__Role_Manager_Current_User__c</fullName>
    <formula>amc__Role_Manager_Approver__r.amc__User__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies if the Current User is the User required to approve this Expense as the Role Manager</inlineHelpText>
    <label>Role Manager Current User</label>
    <type>Checkbox</type>
</CustomField>