DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Role_Manager_Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>amc__Role_Manager_Rejection_Comments__c</fullName>
    <inlineHelpText>Identifies the reason the Role Manager rejected the Expense</inlineHelpText>
    <label>Role Manager Rejection Comments</label>
    <type>TextArea</type>
</CustomField>