DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Source__c.field-meta.xml
<CustomField>
    <fullName>amc__Source__c</fullName>
    <description>Identifies the payment source used to pay for this Expense</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card - Personal</fullName>
            </value>
            <value>
                <fullName>Credit Card - Company</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>