DigicielFull/force-app/main/default/objects/amc__Expense__c/fields/amc__Tax_Amt__c.field-meta.xml
<CustomField>
    <fullName>amc__Tax_Amt__c</fullName>
    <description>Identifies the Tax Amount of the Expense</description>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>