DigicielFull/force-app/main/default/objects/amc__Expense__c/validationRules/amc__Cannot_Approve_Own_Expenses.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Cannot_Approve_Own_Expenses</fullName>
    <active>false</active>
    <description>Prevents a User from approving their own expenses</description>
    <errorConditionFormula>OR(
AND(ISNEW(), ISPICKVAL(amc__Approval_Status__c, &quot;Approved&quot;) ,  amc__Incurred_By__r.amc__User__r.Id =  $User.Id )
,
AND(  ISCHANGED(amc__Approval_Status__c),  ISPICKVAL(amc__Approval_Status__c, &quot;Approved&quot;) ,  amc__Incurred_By__r.amc__User__r.Id =  $User.Id  )
,
AND(ISPICKVAL(amc__Approval_Status__c, &quot;Approved&quot;), ISCHANGED( amc__Incurred_By__c ), amc__Incurred_By__r.amc__User__r.Id =  $User.Id  )
)</errorConditionFormula>
    <errorMessage>You cannot approve your own expenses</errorMessage>
</ValidationRule>