DigicielFull/force-app/main/default/objects/amc__Expense__c/validationRules/amc__Only_Distance_or_Amount_can_be_entered.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Only_Distance_or_Amount_can_be_entered</fullName>
    <active>true</active>
    <description>Only Distance (Km / Miles) or the Amount field can contain a value, not both.</description>
    <errorConditionFormula>AND( NOT(ISBLANK( amc__Distance_Km_Miles__c )) ,NOT(ISBLANK( amc__Amount__c )) )</errorConditionFormula>
    <errorMessage>You can only enter Distance (Km / Miles) OR Amount, not both.</errorMessage>
</ValidationRule>