DigicielFull/force-app/main/default/objects/amc__Expense__c/listViews/amc__All.listView-meta.xml
<ListView>
    <fullName>amc__All</fullName>
    <columns>NAME</columns>
    <columns>amc__Incurred_By__c</columns>
    <columns>amc__Project__c</columns>
    <columns>amc__Date__c</columns>
    <columns>amc__Category__c</columns>
    <columns>amc__Amount_Claimed__c</columns>
    <columns>amc__Distance_Km_Miles__c</columns>
    <columns>amc__Amount__c</columns>
    <columns>amc__Approver__c</columns>
    <columns>amc__Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>