DigicielFull/force-app/main/default/objects/amc__Expense__c/listViews/amc__Expenses_Requiring_My_Approval.listView-meta.xml
<ListView>
    <fullName>amc__Expenses_Requiring_My_Approval</fullName>
    <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>amc__Incurred_By__c</columns>
    <columns>amc__Project__c</columns>
    <columns>amc__Date__c</columns>
    <columns>amc__Category__c</columns>
    <columns>amc__Amount_Claimed__c</columns>
    <columns>amc__Approval_Status__c</columns>
    <columns>amc__Distance_Km_Miles__c</columns>
    <columns>amc__Amount__c</columns>
    <columns>amc__Rejection_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>amc__Role_Manager_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>amc__Role_Manager_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>amc__Project_Owner_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>amc__Project_Owner_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Expenses Requiring My Approval</label>
</ListView>