DigicielFull/force-app/main/default/objects/amc__Expense__c/listViews/amc__My_Pending_Expenses.listView-meta.xml
<ListView>
    <fullName>amc__My_Pending_Expenses</fullName>
    <columns>NAME</columns>
    <columns>amc__Project__c</columns>
    <columns>amc__Category__c</columns>
    <columns>amc__Date__c</columns>
    <columns>amc__Amount__c</columns>
    <columns>amc__Distance_Km_Miles__c</columns>
    <columns>amc__Mileage_Amount__c</columns>
    <columns>amc__Amount_Claimed__c</columns>
    <columns>amc__Expense_Notes__c</columns>
    <columns>amc__Approval_Status__c</columns>
    <columns>amc__Approver__c</columns>
    <columns>amc__Non_Billable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>amc__Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>amc__Incurred_By_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Pending Expenses</label>
</ListView>